--- a/.github/workflows/hello-world1.yml
+++ b/.github/workflows/hello-world1.yml
@@ -5,13 +5,14 @@ name: CI
 on:
  workflow_dispatch:
     inputs:
-      name:
-        description: 'Person to greet'
+      repo:
+        description: 'repository'
         required: true
-        default: 'Mona the Octocat'
-      home:
-        description: 'location'
-        required: false
+      ref:
+        description: 'repository branch'
+        required: true
+
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,5 +27,12 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo "Hello ${{ github.event.inputs.name }}!"
-        echo "- in ${{ github.event.inputs.home }}!"
+        echo "repo ${{ github.event.inputs.repo }}"
+        echo "branch ${{ github.event.inputs.ref }}"
+     
+    # Checkout repository
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      with:
+        repository: ${{ github.event.inputs.repo }}
+        ref: ${{ github.event.inputs.ref }}
