--- a/.github/workflows/hello-world1.yml
+++ b/.github/workflows/hello-world1.yml
@@ -38,4 +38,4 @@ jobs:
       with:
         repository: ${{ github.event.inputs.repo }}
         ref: ${{ github.event.inputs.ref }}
-        token: ${{ secrets.WEBHOOK }}
+#        token: ${{ secrets.WEBHOOK }}
