--- a/get-image-version/action.yml
+++ b/get-image-version/action.yml
@@ -1,11 +1,22 @@
 name: 'Get Image Version'
 description: 'This action grabs Version and Version suffix from Directory.Build.Props. If Version suffix not present calculate it as a branch commits count'
 outputs:
-  version: # id of output
-    description: 'Version value formatted as prefix.suffix or PR-branch name-prefix.suffix'
-  moduleId: # id of output
+  branchName:
+    description: 'Triggered branch name'
+  prefix:
+    description: 'Version prefix value'
+  suffix:
+    description: 'Version suffix value'
+  moduleId:
     description: 'Module Id value'
-
+  sha:
+    description: 'Version SHA value'
+  shortVersion:
+    description: 'Version value formatted as prefix-suffix'
+  shaVersion:
+    description: 'Version value formatted as branchName-prefix-sha'
+  fullVersion:
+    description: 'Version value formatted as branchName-prefix-suffix'
 
 runs:
   using: 'node12'
